--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ III. the app
 /* I. global element selectors */
 html, body {
 	align-items: center;
-	background-color: #F5F5F6;
+	background-color: #9503e9;
 	color: #333;
 	display: flex;
 	flex-direction: column;
@@ -42,7 +42,7 @@ button:disabled {
 }
 
 .orange {
-	background-color: #ff9800;
+	background-color: #61a38f;
 }
 
 /* III. the app and its contents */
@@ -85,7 +85,7 @@ button:disabled {
 
 	/* B. canvas container */
 	#board {
-		background-color: white;
+		background-color: rgb(97, 97, 97);
 		box-shadow: 0 2px 5px #D0D0D0;
 		flex: 2 1 auto;
 		margin: 10px 0 0 0;
@@ -103,7 +103,7 @@ button:disabled {
 
 		.word-blankletter {
 			align-items: flex-end;
-			background-color: #ff9800;
+			background-color: #61a38f;
 			box-shadow: 0 2px 5px #D0D0D0;
 			display: flex;
 			height: 30px;
